# JDbrowser

./: .gitignore  Cargo.toml  Makefile  readme.md
src/: app.rs  main.rs  ui.rs
src/ui/: file_menu.rs  help_view.rs  talbe_view.rs
