[package]
name = "jdbrowser"
version = "1.5.0"
edition = "2021"
authors = ["Jonathan Keyuk","inselberg"]
license = "GNU GPLv3"
description = "A tool to browse Sqlite databases"
readme = "readme.md"
keywords = ["cli", "tui", "sqlite","browser"]
categories = ["command-line-utilities"]

[dependencies]
arboard = { version = "3.6.1" , features = ["wayland-data-control"]}
clap = { version = "4.5.57" , features = ["derive"]}
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.30.0", features = ["serde"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
sqlparser = "0.60.0"
strum = "0.27.2"
